Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ pr:
 
 # setting variables
 variables:
-  azureSubscription: $(SubscriptionARM)
+  azureSubscription: "FrontEndARM"
 
   RgName: $(RGNAME)
 
