Update resource group name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ pr:
 variables:
   azureSubscription: "FrontEndARM"
 
-  RgName: $(RGNAME)
+  RgName: $(tourRGname)
 
   # names are based on created azure web app
   webAppName: "tourxpro"
